[package]
name = "qsar"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
description = "qsar: a small Rust library for computing molecular descriptors and integrating with Linfa for QSAR modeling."
repository = "https://github.com/sawsimeon/qsar"
homepage = "https://github.com/sawsimeon/qsar"
documentation = "https://docs.rs/qsar"
readme = "README.md"
keywords = ["qsar", "cheminformatics", "molecular-descriptors", "machine-learning", "chemoinformatics"]
categories = ["science", "chemistry"]
authors = ["Your Name <you@example.com>"]
publish = true

[dependencies]
# Data handling & ML
ndarray = "0.15"
linfa = "0.6"
linfa-linear = "0.6"
linfa-datasets = "0.6"

# Utilities & IO
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
thiserror = "1.0"
once_cell = "1.17"

[dev-dependencies]
pretty_assertions = "1.3"

# Notes:
# - This crate intentionally uses a small, pure-Rust lightweight parser for
#   basic molecular-descriptor tasks (no native Open Babel/RDKit dependency).
# - To integrate a full parser later, add an optional feature and the relevant
#   binding crates (e.g., openbabel-sys) and gate parsing code behind that feature.
